# watch

./: .gitignore  Cargo.toml  Justfile  README.md  Watchfile
src/: lib.rs  main.rs  parser.rs  task.rs  term.rs  watcher.rs
