# wengwengweng

[package]
name = "watch"
description = "watch files and execute commands"
version = "0.0.0"
authors = ["tga <tga@wengwengweng.me>"]
repository = "https://github.com/slmjkdbtl/watch"
license = "Zlib"
edition = "2018"
readme = "README.md"
exclude = ["TODO"]

[dependencies]
glob = "0.3"
pom = "3.1"
argh = "0.1"

